# dynamic_parameter_estimation

./: dlenv.yml  readme.md  rgen.yml  tgen.yml
deep_learning/: notes  todo
deep_learning/config/: data_preprocessing.yaml  deep_learning.yaml  dynamic_parameters.yaml  environment.yaml  shared.yaml
deep_learning/data_preprocessor/: dynamic_normalizer.py  features_analyzer.py  jacob.py  output_analyzer.py
deep_learning/deep_learning/: Evaluate_model.py  GTvsPred.py  datasets_synth.py  main.py  main_EvaluatorModel.py  model.py  space_grapher.py  utils.py  (+1 more)
robot_generator/: main.py
ws/src/torque_controlled_arm/: package.xml  setup.cfg  setup.py
ws/src/torque_controlled_arm/config/: TODO  base_controllers.yaml  controllers.yaml  settings.yaml
ws/src/torque_controlled_arm/documentation/: architecture_description.md  generate_block_diagram.py
ws/src/torque_controlled_arm/launch/: bringup.launch.py  robot.launch.py  robot_respawn.launch.py
ws/src/torque_controlled_arm/orchestrator/: __init__.py  code_export.txt  core.py  gui.py  process_manager.py  robot_manager.py  run.py  utils.py
ws/src/torque_controlled_arm/torque_controlled_arm/: controller_node.py  old_controller_retired.py  pid.py  target_gen.py
ws/src/torque_controlled_arm/utils/: aggregate_csv.py  all_urdfs_controller_editor.py  controller_adapter.py  controllers_appender.py  dataset_dynamic_parameter_extractor.py  export_code.py  gazebo_adapter.py  robot_controller_editor.py  robots_editor.py  size_check.py  trajectorry_visualizer.py
ws/src/torque_controlled_arm/world/: empty_world.sdf
(+533 files in other folders)
